cmake_minimum_required(VERSION 3.16)
project(hello)
file(GLOB SRC_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
include_directories(${CMAKE_SOURCE_DIR}/header)
add_executable(client ${CMAKE_SOURCE_DIR}/client/client.cpp)
add_executable(server ${SRC_FILES})